restore the last used canvas when the app is started